sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ':' expected but '[' found.
def bubbleSort(int[i])  { 
                  ^AlgBubbleSort1:10: error: identifier expected but '}' found.
}
^