sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(int[i])  { 
	if { i<j
	plusPetit(i:int,j:int):Boolean}
	else{echange(i:int,j:int)}
}
